Contained $or access planning is incorrect for $elemMatch object, results in invariant failure

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Critical - P2
    • 3.6.3, 3.7.2
    • Affects Version/s: 3.6.0, 3.7.1
    • Component/s: Querying
    • None
    • Fully Compatible
    • ALL
    • v3.6
    • Hide

      Run the attached repro.js:

      python buildscripts/resmoke.py repro.js
      
      Show
      Run the attached repro.js : python buildscripts/resmoke.py repro.js
    • Query 2018-02-12
    • None
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The server crashes when a query is eligible for an OR pushdown through an $elemMatch object with an $or descendent. This issue only affects query shapes that involve an $elemMatch-$or construction, such as the following:

      coll.find({a: 1, $or: [{b: 2}, {b: {$elemMatch: {$or: [{c: 4}, {c: 5}]}}}]});
      

        1. repro.js
          0.4 kB
          Charlie Swanson

            Assignee:
            David Storch
            Reporter:
            Charlie Swanson
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: