SERVER-33005 Fix planner to avoid incorrect OR pushdown through $elemMatch.

The PlanEnumerator now tracks pushdown routes which descend
through an $elemMatch object. These routes are pruned when
subsequently descending through an OR.